...
            settings.panelPosition = .left
            return settings
        }
        
        static var ignoredApps: Settings {
            var settings = Settings.default
            settings.ignoredAppBundleIds = ["com.apple.TextEdit", "com.example.notInstalled"]
            return settings
        }
        
        static func from(_ str: String) -> Settings? {
            switch str {
            case "--Settings.testData=a":
...
